load single venue data

--- a/www/templates/more.html
+++ b/www/templates/more.html
@@ -34,7 +34,7 @@
         </div>
         <div class="name-bar">
           <p class="name">{{member.member.first_name}} {{member.member.last_name}}</p>
-          <span>{{$root.member.member.member_tier.tier.name}}</span>
+          <!-- <span>{{$root.member.member.member_tier.tier.name}}</span> -->
           <span ng-if="$root.member.member.bepoz_account_status != 'OK'">({{$root.member.member.bepoz_account_status}})</span>
         </div>
         <div class="point-bar row">
