--- a/www/css/global.css
+++ b/www/css/global.css
@@ -373,7 +373,7 @@ img.async-load {
   /*text-align: left;*/
   /*font-size: 16px;*/
 }
-.signup-form .tnc, .signup-form .tnc > span{
+.tnc, .tnc > span, .signup-form .tnc, .signup-form .tnc > span{
   color: #ccc; 
   font-size: 12px;
   text-transform: capitalize;
