--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -42,6 +42,7 @@
               <i class="icon ion-social-googleplus"></i>
             </button></div>
           </div>
+          <p class="text-center tnc" style="color: #222;">By creating an account, you agree to Fal Management Group's <span ng-click="openLegaslAlert('terms_and_conditions')" class="highlight-color">Terms &amp; Conditions</span> and <span ng-click="openLegaslAlert('privacy_policy')" class="highlight-color">Privacy Policy</span>.</p>
         </div>
       </div>
     </div>
