--- a/www/templates/ticketsTab.html
+++ b/www/templates/ticketsTab.html
@@ -17,10 +17,10 @@
                     <img class="item-img" ng-src="{{tickets[r*2].order_detail.listing.image_square || 'https://s3-ap-southeast-2.amazonaws.com/fal-group-royalty/settings/invoiceLogo/image_1530253398.png'}}"
                       alt="">
                     <div class="ticket-desc" ng-click="showVoucher(tickets[r*2].id)">
-                      <h4>{{tickets[r*2].order_detail.voucher_setup.name}}</h4>
+                      <h4>{{tickets[r*2].name}}</h4>
                       <div class="ticket-status">
-                        <div class="">{{tickets[r*2].order_detail.status == 'successful'?'Confirmed':(tickets[r*2].order_detail.status == 'in_progress'?'In
-                          Progress':tickets[r*2].order_detail.status)}}</div>
+                        <div class="">{{tickets[r*2].status == 'successful'?'Confirmed':(tickets[r*2].status == 'in_progress'?'In
+                          Progress':tickets[r*2].status)}}</div>
                         <span ng-if="!tickets[r*2].barcode" class="barcode-msg row-4">This ticket has been processing, please try again later.</span>
                       </div>
                       <div class="ticket-footer">
@@ -34,10 +34,10 @@
                     <img class="item-img" ng-src="{{tickets[r*2+1].order_detail.listing.image_square || 'https://s3-ap-southeast-2.amazonaws.com/fal-group-royalty/settings/invoiceLogo/image_1530253398.png'}}"
                       alt="">
                     <div class="ticket-desc" ng-click="showVoucher(tickets[r*2+1].id)">
-                      <h4>{{tickets[r*2+1].order_detail.voucher_setup.name}}</h4>
+                      <h4>{{tickets[r*2+1].name}}</h4>
                       <div class="ticket-status">
-                        <div class="">{{tickets[r*2+1].order_detail.status == 'successful'?'Confirmed':(tickets[r*2+1].order_detail.status == 'in_progress'?'In
-                          Progress':tickets[r*2+1].order_detail.status)}}</div>
+                        <div class="">{{tickets[r*2+1].status == 'successful'?'Confirmed':(tickets[r*2+1].status == 'in_progress'?'In
+                          Progress':tickets[r*2+1].status)}}</div>
                         <span ng-if="!tickets[r*2+1].barcode" class="barcode-msg row-4">This ticket has been processing, please try again later.</span>
                       </div>
                       <div class="ticket-footer">
