--- a/www/css/global.css
+++ b/www/css/global.css
@@ -1192,16 +1192,17 @@ img.async-load {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  line-height: 1em;
-  max-height: 2em;
+  line-height: 1.2em;
+  max-height: 2.4em;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-}
-
-.ticket-grid .ticket-desc .ticket-status .barcode-msg.row-4{
-  max-height: 4em;
-  -webkit-line-clamp: 4;
-}
+  }
+  
+  .ticket-grid .ticket-desc .ticket-status .barcode-msg.row-4{
+  max-height: 2.4rem;
+  -webkit-line-clamp: 2;
+  font-size: 1rem;
+  }
 
 .ticket-grid .ticket-desc .ticket-footer{
   position: absolute;
