--- a/www/templates/sign-up.html
+++ b/www/templates/sign-up.html
@@ -25,7 +25,7 @@
             </p>
             <label class="item item-input item-stacked-label">
                 <span class="input-label">first name</span>
-                <input type="text" name="first_name" placeholder="First Name" ng-model="form.first_name" ng-pattern="/^[a-zA-Z]+[a-zA-Z0-9 ]+$/"
+                <input type="text" name="first_name" ng-model="form.first_name" ng-pattern="/^[a-zA-Z]+[a-zA-Z0-9 ]+$/"
                     required>
                 <p class="form-valid-msg" ng-if="myForm.first_name.$valid">
                     <i class="icon ion-checkmark-circled balanced"></i>
@@ -39,7 +39,7 @@
 
             <label class="item item-input item-stacked-label">
                 <span class="input-label">last name</span>
-                <input type="text" name="last_name" placeholder="Last Name" ng-model="form.last_name" ng-pattern="/^[a-zA-Z]+[a-zA-Z0-9 ]+$/"
+                <input type="text" name="last_name"  ng-model="form.last_name" ng-pattern="/^[a-zA-Z]+[a-zA-Z0-9 ]+$/"
                     required>
                 <p class="form-valid-msg" ng-if="myForm.last_name.$valid">
                     <i class="icon ion-checkmark-circled balanced"></i>
@@ -52,7 +52,7 @@
 
             <label class="item item-input item-stacked-label">
                 <span class="input-label">email</span>
-                <input type="email" name="email" placeholder="email" ng-model="form.email" ng-pattern='/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/'
+                <input type="email" name="email"  ng-model="form.email" ng-pattern='/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/'
                     required email-exists>
                 <p class="form-valid-msg" ng-if="myForm.email.$valid">
                     <i class="icon ion-checkmark-circled balanced"></i>
@@ -67,7 +67,7 @@
 
             <label class="item item-input item-stacked-label">
                 <span class="input-label">Password</span>
-                <input type="password" name="password" placeholder="Password" ng-model="form.password" ng-pattern="/^(?=.*\d)(?=.*[a-z]).{6,}$/"
+                <input type="password" name="password"  ng-model="form.password" ng-pattern="/^(?=.*\d)(?=.*[a-z]).{6,}$/"
                     required>
                 <p class="form-valid-msg" ng-if="myForm.password.$valid">
                     <i class="icon ion-checkmark-circled balanced"></i>
@@ -79,7 +79,7 @@
             </label>
             <label class="item item-input item-stacked-label">
                 <span class="input-label">Confirm Password</span>
-                <input type="password" name="confirm_password" placeholder="Confirm Password" ng-model="form.confirm_password" compare-To="form.password"
+                <input type="password" name="confirm_password"  ng-model="form.confirm_password" compare-To="form.password"
                     required>
                 <p class="form-valid-msg" ng-if="myForm.confirm_password.$valid">
                     <i class="icon ion-checkmark-circled balanced"></i>
@@ -91,7 +91,7 @@
                 <span class="input-label">Date of Birth</span>
                 <!-- <input type="{{dateInputType}}" name="dob" ng-model="form.dob" placeholder="Birthday" ng-focus="dateInputType = 'date'" ng-blur="changeInputToDate()" required> -->
                 <!-- <input type="date" name="dob" ng-model="form.dob" placeholder="Birthday" class="sign-up-dob" onchange="this.className=(this.value!=''?'has-value':'')" required dob-check> -->
-                <input type="date" name="dob" ng-model="form.dob" placeholder="Birthday" required dob-check>
+                <input type="date" name="dob" ng-model="form.dob"  required dob-check>
                 <p class="form-valid-msg" ng-if="myForm.dob.$valid">
                     <i class="icon ion-checkmark-circled balanced"></i>
                 </p>
@@ -100,7 +100,7 @@
             </label>
             <label class="item item-input item-stacked-label">
                 <span class="input-label">Mobile</span>
-                <input type="tel" name="mobile" placeholder="Mobile" ng-model="form.mobile" required ng-pattern="/^0?4\d{8}$/">
+                <input type="tel" name="mobile"  ng-model="form.mobile" required ng-pattern="/^0?4\d{8}$/">
                 <p class="form-valid-msg" ng-if="myForm.mobile.$valid">
                     <i class="icon ion-checkmark-circled balanced"></i>
                 </p>
