--- a/www/templates/sign-up.html
+++ b/www/templates/sign-up.html
@@ -75,7 +75,7 @@
                 <p class="form-error-msg" ng-if="myForm.password.$error.required && myForm.password.$dirty">
                     <i class="icon ion-information-circled assertive"></i> Please enter your password</p>
                 <p class="form-error-msg" ng-if="myForm.password.$error.pattern">
-                    <i class="icon ion-information-circled assertive"></i> Password must be not less than 6 characters with at least 1 letter & 1 number.</p>
+                    <i class="icon ion-information-circled assertive"></i> Password must be not less than 6 characters with at least 1 letter &amp; 1 number.</p>
             </label>
             <label class="item item-input item-stacked-label">
                 <span class="input-label">Confirm Password</span>
