--- a/www/css/listings.css
+++ b/www/css/listings.css
@@ -150,7 +150,7 @@
   left: 0;
   display: flex;
   flex-direction: row;
-  /* justify-content:center; */
+  justify-content:center;
   align-items:center;
   background-color: rgba(0, 0, 0, 0.6);
 }
