--- a/www/templates/history.html
+++ b/www/templates/history.html
@@ -30,7 +30,7 @@
       <!-- <div class="card order-item animated slideInUp" ng-repeat="order in orders | orderBy:'id':true" ng-if="order.payment_status == 'successful'"> -->
             <div class="item item-divider">
                 <div class="row">
-                    <div class="col text-left" style="font-size: 12px; color:#A57C57; font-weight:bold;">#{{order.id}}</div>
+                    <div class="col text-left order-header" style="font-size: 12px; font-weight:bold;">#{{order.id}}</div>
                     <div class="col" style="font-size: 12px;"></div>
                     <div class="col"></div>
                     <!-- <div class="col" style="font-size: 12px;">{{order.payment_status}}</div> -->
