--- a/www/templates/more.html
+++ b/www/templates/more.html
@@ -42,7 +42,7 @@
             <i class="icon far fa-ticket-alt"></i>
             <!-- <span class="label">balance</span>
             <span class="points">{{member.member.balance || 0 | currency:'$':0}}</span> -->
-            <span class="label">ticktes</span>
+            <span class="label">tickets</span>
             <span class="points">{{tickets.length}}</span>
           </div> 
           <div class="col">
