remove venue name in our team page

--- a/www/templates/team.html
+++ b/www/templates/team.html
@@ -22,7 +22,7 @@
               <span class="barcode-msg row-4">{{listings[r*2].listing.desc_short}}</span>
             </div>
             <div class="ticket-footer">
-              <span class="voucher-exp">{{listings[r*2].listing.venue.name}}</span>
+              <!-- <span class="voucher-exp">{{listings[r*2].listing.venue.name}}</span> -->
               <!-- <span class="voucher-qty">x2</span> -->
             </div>
           </div>
@@ -36,7 +36,7 @@
               <span class="barcode-msg row-4">{{listings[r*2+1].listing.desc_short}}</span>
             </div>
             <div class="ticket-footer">
-              <span class="voucher-exp">{{listings[r*2+1].listing.venue.name}}</span>
+              <!-- <span class="voucher-exp">{{listings[r*2+1].listing.venue.name}}</span> -->
               <!-- <span class="voucher-qty">x2</span> -->
             </div>
           </div>
