--- a/www/templates/tickets.html
+++ b/www/templates/tickets.html
@@ -20,7 +20,7 @@
 
     <div class="ticket-grid">
       <div class="row" ng-repeat="r in [] | range:btnRows(2)">
-        <div class="col col-50 animated fadeInLeft">
+        <div ng-if="tickets[r*2]" class="col col-50 animated fadeInLeft">
           <img class="item-img" ng-src="{{tickets[r*2].img || 'https://s3-ap-southeast-2.amazonaws.com/bepoz-loyalty-app/000.png'}}" alt="">
           <div class="ticket-desc" ng-click="showVoucher(tickets[r*2].id)">
             <h4>{{tickets[r*2].name}}</h4>
@@ -35,7 +35,7 @@
           </div>
           <!-- tickets[r*2] -->
         </div>
-        <div class="col col-50 animated fadeInRight">
+        <div ng-if="tickets[r*2+1]" class="col col-50 animated fadeInRight">
           <img class="item-img" ng-src="{{tickets[r*2+1].img || 'https://s3-ap-southeast-2.amazonaws.com/bepoz-loyalty-app/000.png'}}" alt="">
           <div class="ticket-desc" ng-click="showVoucher(tickets[r*2+1].id)">
             <h4>{{tickets[r*2].name}}</h4>
