--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,7 +1,7 @@
 /* Empty. Add your own CSS if you like */
 @import 'global.css';
 @import 'buttons.css';
-@import 'theme.css';
+@import 'theme-white.css';
 @import 'tabs.css';
 @import 'home.css';
 @import 'listings.css';
