change api endpoint

--- a/www/templates/sign-up.html
+++ b/www/templates/sign-up.html
@@ -109,7 +109,7 @@
                 <p class="form-error-msg" ng-if="myForm.mobile.$error.pattern">
                     <i class="icon ion-information-circled assertive"></i> Please enter a valid mobile number eg. 04 0000 0000</p>
             </label>
-            <p class="text-just tnc">By creating an account, you agree to Fal Management Group's <span ng-click="openLegaslAlert('terms_and_conditions')" class="highlight-color">Terms &amp; Conditions</span> and <span ng-click="openLegaslAlert('privacy_policy')" class="highlight-color">Privacy Policy</span>.</p>
+            <p class="text-just tnc">By creating an account, you agree to Bended Elbow's <span ng-click="openLegaslAlert('terms_and_conditions')" class="highlight-color">Terms &amp; Conditions</span> and <span ng-click="openLegaslAlert('privacy_policy')" class="highlight-color">Privacy Policy</span>.</p>
 
         </div>
         <div class="text-center">
