--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -76,11 +76,11 @@
           About
           <i class="icon ion-chevron-right icon-accessory"></i>
         </ion-item>
-        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/gifts">
+        <!-- <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/gifts">
           <i class="icon fal fa-gift"></i>
           Gift Cards
           <i class="icon ion-chevron-right icon-accessory"></i>
-        </ion-item>
+        </ion-item> -->
         <!-- <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/booths">
           <i class="icon ems-functions-icon"></i>
           Booth Booking
@@ -116,11 +116,11 @@
           Partners
           <i class="icon ion-chevron-right icon-accessory"></i>
         </ion-item> -->
-        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/refer">
+        <!-- <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/refer">
           <i class="icon fa fa-handshake"></i>
           Refer a Friend
           <i class="icon ion-chevron-right icon-accessory"></i>
-        </ion-item>
+        </ion-item> -->
         <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/team">
           <i class="icon fa fa-users"></i>
           Our Team
