--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -24,15 +24,15 @@
         <ion-nav-view name="tab5"></ion-nav-view>
       </ion-tab> -->
 
-      <ion-tab title="What's on" icon-off="fa {{$root.layout.tabs[1].icon}}" icon-on="fa {{$root.layout.tabs[1].icon}}" href="#/menu/tabs/whatson">
+      <ion-tab title="What's on" icon-off="fa {{$root.layout.tabs[1].icon}}" icon-on="fa {{$root.layout.tabs[1].icon}}" href="#/menu/tabs/vouchers">
         <ion-nav-view name="tab-whats"></ion-nav-view>
       </ion-tab>
 
-      <ion-tab title="Promotions" icon-off="fa {{$root.layout.tabs[2].icon}}" icon-on="fa {{$root.layout.tabs[2].icon}}" href="#/menu/tabs/tickets">
+      <ion-tab title="Promotions" icon-off="fa {{$root.layout.tabs[2].icon}}" icon-on="fa {{$root.layout.tabs[2].icon}}" href="#/menu/tabs/promotions">
         <ion-nav-view name="tab-pro"></ion-nav-view>
       </ion-tab>
 
-      <ion-tab title="Gift Cards" icon-off="fa {{$root.layout.tabs[3].icon}}" icon-on="fa {{$root.layout.tabs[3].icon}}" href="#/menu/tabs/time-location">
+      <ion-tab title="Gift Cards" icon-off="fa {{$root.layout.tabs[3].icon}}" icon-on="fa {{$root.layout.tabs[3].icon}}" href="#/menu/tabs/tickets">
         <ion-nav-view name="tab-gift"></ion-nav-view>
       </ion-tab>
 
