--- a/www/css/theme-white.css
+++ b/www/css/theme-white.css
@@ -8,7 +8,7 @@
 
 .bar.bar-subheader{
   /*background-color: #361939;*/
-  background:#fff !important;
+  background:linear-gradient(to right, #72C6C7, #0D2956) !important;
   color: #fff;
   /* border: 1px solid rgba(149, 152, 154, 0.13); */
   border: 0;
@@ -17,7 +17,7 @@
 }
 
 .bar.bar-subheader .title{
-  color: #72C6C7;
+  color: #fff;
   font-weight: bold;
   text-transform:uppercase;
   font-size: 16px;
@@ -28,7 +28,7 @@ ion-view{
 }
 
 ion-view.login-view{
-  background: url('../img/bepoz_bg.jpg') no-repeat center;
+  background: url('../img/bepoz_bg.png') no-repeat center;
   background-size: cover;
 }
 
