--- a/www/templates/page-tpl.html
+++ b/www/templates/page-tpl.html
@@ -1,27 +1,29 @@
 <ion-view view-title="">
-  <!-- <ion-nav-title></ion-nav-title>
+  <ion-nav-title></ion-nav-title>
   <ion-nav-bar class="bar-color-1" align-title="center">
       <ion-nav-buttons side="left">
           <button class="button button-icon button-white ion-ios-arrow-back" ng-click="back()">
           </button>
       </ion-nav-buttons>
-  </ion-nav-bar> -->
+  </ion-nav-bar>
   <div class="bar bar-subheader">
-    <h2 class="title">Page {{pageNo}}</h2>
+    <h2 class="title">{{pageName}}</h2>
   </div>
-  <ion-content class="main-content has-subheader">
+  <ion-content class="main-content has-subheader has-tabs" delegate-handle="mainScroll">
     <div class="button-bar" ng-if="pages.length>1">
-      <a ng-repeat="page in pages" class="button button-color-dark" ng-click="changeBtn(page)" ng-class="btnActived(page)?'button-outline':''">{{page.page_name}}</a>
+      <a ng-repeat="page in pages" class="button" ng-click="changeBtn(page)" ng-class="btnActived(page)?'button-outline':''">{{page.title}}</a>
       <!-- <a class="button button-color-dark" ng-click="changeBtn(false)" ng-class="btn1Active?'':'button-outline'">redeem</a> -->
     </div>
-    <ion-refresher
-            pulling-text="Pull to refresh..."
-            on-refresh="init()">
+    <ion-refresher pulling-text="Pull to refresh..." on-refresh="init()">
     </ion-refresher>
-    <div ng-if="btnActive.listings.length <= 0" class="empty-msg padding">
-      <h4 class="text-center"><i class="icon ion-paper-airplane"></i><br>No Events found, please check again later.</h4>
+
+    <div ng-if="displayItems.length <= 0" class="empty-msg padding">
+      <h4 class="text-center">
+        <i class="icon ion-paper-airplane"></i>
+        <br>No Events found, please check again later.</h4>
     </div>
-    <div ng-if="btnActive.listings.length > 0" class="list card no-h-margin" ng-repeat="l in btnActive.listings | PinToTop">
+
+    <div ng-if="btnActive.listings.length > 0" class="list card no-h-margin" ng-repeat="l in displayItems = (btnActive.listings | OrderByVenue:filterItems:selectedFilter | PinToTop)">
 
       <div class="item item-body" ng-click="openItem(l.listing.id)">
         <div class="listing-info">
@@ -29,7 +31,7 @@
             <img class="async-load listing-banner-img" ng-src="{{l.listing.image_banner}}">
           </div>
           <div class="listing-desc">
-            <div class="">
+            <div class="listing-details">
               <h2>{{l.listing.heading}}</h2>
               <p class="short-desc" ng-bind-html="$root.highlightFirstWord(l.listing.desc_short)"></p>
               <div class="listing-days" ng-if="l.listing.payload.occurrence.length > 0">
@@ -55,7 +57,7 @@
         </div> -->
 
       </div>
-  </div>
+    </div>
   </ion-content>
-  <!-- <bottom-tabs-bar></bottom-tabs-bar> -->
+  <bottom-tabs-bar></bottom-tabs-bar>
 </ion-view>
