--- a/www/templates/promotions.html
+++ b/www/templates/promotions.html
@@ -1,11 +1,11 @@
 <ion-view view-title="">
-    <ion-nav-title></ion-nav-title>
+    <!-- <ion-nav-title></ion-nav-title>
     <ion-nav-bar class="bar-color-1" align-title="center">
         <ion-nav-buttons side="left">
             <button class="button button-icon button-white ion-ios-arrow-back" ng-click="back()">
             </button>
         </ion-nav-buttons>
-    </ion-nav-bar>
+    </ion-nav-bar> -->
   <div class="bar bar-subheader">
     <h2 class="title">Promotions</h2>
   </div>
