changed error msg color with white bg

--- a/www/templates/changePassword-modal.html
+++ b/www/templates/changePassword-modal.html
@@ -15,22 +15,22 @@
           <label class="item item-input">
               <input type="password" name="password" placeholder="Old Password" ng-model="new_pw.password" required>
           </label>
-          <p class="form-valid-msg" style="color:#fff;" ng-if="myForm.password.$error.required && myForm.password.$dirty"><i class="icon ion-information-circled assertive"></i> Please enter your password</p>
+          <p class="form-error-msg" ng-if="myForm.password.$error.required && myForm.password.$dirty"><i class="icon ion-information-circled assertive"></i> Please enter your password</p>
 
           <label class="item item-input">
               <!-- <span class="input-label">Password</span> -->
               <input type="password" name="new_password" placeholder="New Password" ng-model="new_pw.new_password" ng-pattern="/^(?=.*\d).{6,}$/" required>
               <p class="form-valid-msg" ng-if="myForm.new_password.$valid"><i class="icon ion-checkmark-circled balanced"></i></p>
           </label>
-          <p class="form-error-msg" style="color:#fff;" ng-if="myForm.new_password.$error.required && myForm.new_password.$dirty"><i class="icon ion-information-circled assertive"></i> Please enter new your password</p>
-          <p class="form-error-msg" style="color:#fff;" ng-if="myForm.new_password.$error.pattern"><i class="icon ion-information-circled assertive"></i> Password must be not less than 6 characters with at least 1 letter &amp; 1 number.</p>
+          <p class="form-error-msg" ng-if="myForm.new_password.$error.required && myForm.new_password.$dirty"><i class="icon ion-information-circled assertive"></i> Please enter new your password</p>
+          <p class="form-error-msg" ng-if="myForm.new_password.$error.pattern"><i class="icon ion-information-circled assertive"></i> Password must be not less than 6 characters with at least 1 letter &amp; 1 number.</p>
 
           <label class="item item-input">
               <!-- <span class="input-label">Confirm Password</span> -->
               <input type="password" name="confirm_password" placeholder="Confirm New Password" ng-model="new_pw.confirm_password" compare-To="new_pw.new_password" required>
               <p class="form-valid-msg" ng-if="myForm.confirm_password.$valid"><i class="icon ion-checkmark-circled balanced"></i></p>
           </label>
-          <p class="form-error-msg" style="color:#fff;" ng-if="myForm.confirm_password.$error.compareTo && myForm.confirm_password.$dirty"><i class="icon ion-information-circled assertive"></i> Passwords do not match</p>
+          <p class="form-error-msg" ng-if="myForm.confirm_password.$error.compareTo && myForm.confirm_password.$dirty"><i class="icon ion-information-circled assertive"></i> Passwords do not match</p>
 
 
           <div class="booth-btn">
