fixed some old android version can't support linear-gradient

--- a/www/css/tabs.css
+++ b/www/css/tabs.css
@@ -25,8 +25,8 @@
     /* color: #fff; */
     border: 0 solid #fff;
     /* background: -webkit-linear-gradient(#72C6C7, #72C6C7); */
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    /* -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
     /* theme setting */
     /* border-color: #0D2956; */
     border-top-width: 2px;
